--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,1 +1,21 @@
-<a href="/auth/instagram">Login with Instagram</a>
+<div class="ui hidden divider"></div>
+
+<div class="ui two column centered row">
+
+  <div class="ui centered column">
+    <div class="ui center aligned segment">
+      <h1 class="ui header">Login</h1>
+
+      <div class="ui divider"></div>
+
+      <a href="/auth/instagram">
+        <div class="ui instagram button">
+          <i class="instagram icon"></i>
+          Login with Instagram
+        </div>
+      </a>
+    </div>
+
+  </div>
+
+</div>
