--- a/views/account.handlebars
+++ b/views/account.handlebars
@@ -1,4 +1,8 @@
-hello account
-<p>ID: {{user.id}}</p>
-<p>Username: {{user.username}}</p>
-<p>Name:{{user.displayName}}</p>
+<div class="centered column">
+  <h1 class="ui header">Hi, {{user.displayName}}!</h1>
+  <div class="ui segment">
+    <p>ID: {{user.id}}</p>
+    <p>Username: {{user.username}}</p>
+    <p>Name:{{user.displayName}}</p>
+  </div>
+</div>
