--- a/views/photos.handlebars
+++ b/views/photos.handlebars
@@ -1,4 +1,16 @@
-{{#each photos}}
-  <img src="{{url}}" class="img-responsive" class="img hashtag-img">
-    <p>{{caption}}</p>
-{{/each}}
+<div class="ui column">
+  <div class="ui cards">
+      {{#each photos}}
+        <div class="card">
+          <a class="image">
+            <img src="{{url}}">
+          </a>
+          <div class="content">
+            <div class="description">
+                {{caption}}
+            </div>
+          </div>
+        </div>
+      {{/each}}
+  </div>
+</div>
