Added Facebook strategy

--- a/views/account.handlebars
+++ b/views/account.handlebars
@@ -1,8 +1,8 @@
 <div class="centered column">
-  <h1 class="ui header">Hi, {{user.displayName}}!</h1>
+  <h1 class="ui header">Hi, {{user.full_name}}!</h1>
   <div class="ui segment">
     <p>ID: {{user.id}}</p>
     <p>Username: {{user.username}}</p>
-    <p>Name:{{user.displayName}}</p>
+    <p>Name:{{user.full_name}}</p>
   </div>
 </div>
