--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -12,6 +12,13 @@
           Login with Instagram
         </div>
       </a>
+
+      <a href="/auth/facebook">
+        <div class="ui facebook button">
+          <i class="facebook icon"></i>
+          Login with Facebook
+        </div>
+      </a>
     </div>
 
   </div>
