Added likes page

--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -5,6 +5,9 @@
   <a href="/photos" class="item">
     <i class="camera retro icon"></i> Photos
   </a>
+  <a href="/likes" class="item">
+    <i class="thumbs up icon"></i> Likes
+  </a>
   <div class="right menu">
     <a class="ui item">
       Login
