--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -12,6 +12,7 @@
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
   <![endif]-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.js"></script>
   <link rel="stylesheet" type="text/css" href="css/semantic.min.css">
 </head>
 
@@ -23,7 +24,15 @@
     {{{body}}}
 </div>
 </body>
-
+<script>
+  window.onload = function(){
+    var options = {
+      animateRotate : false
+    };
+    var ctx = document.getElementById("categoryChart").getContext("2d");
+    window.myPie = new Chart(ctx).Pie({{{categories}}}, options);
+  };
+</script>
 <script src="https://code.jquery.com/jquery.js"></script>
 <script src="js/semantic.min.js"></script>
 </html>
